...
        android:id="@+id/addButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="#F1BE48"
        android:shadowColor="@color/white"
        android:text="Friends"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
...
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="114dp"
        android:layout_height="53dp"
        android:layout_marginLeft="12dp"
        android:text="FRIENDS"
        android:textColor="@color/white"
        android:textSize="28sp"
...
